manifests/network-policies/prod-allow-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prod-api
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: prod-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - podSelector:
            matchLabels:
              app: prod-web
      ports:
        - port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prod
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: postgres-prod
      ports:
        - port: 5432
    - to: []
      ports:
        - port: 53
          protocol: UDP
