manifests/network-policies/prod-allow-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prod-web
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: prod-web
  ingress:
    - from: []
      ports:
        - port: 80
  egress:
    - to: []
      ports:
        - port: 53
          protocol: UDP
